include/ctoon.h

        typedef unsigned char       uint8_t;
        typedef unsigned int        uint32_t;
        typedef unsigned __int64    uint64_t;
        typedef unsigned __int8     uint8_t;
        typedef unsigned __int32    uint32_t;
        typedef unsigned __int64    uint64_t;
        typedef unsigned char   uint8_t;
        typedef unsigned int    uint32_t;
        typedef unsigned long   uint32_t;
        typedef unsigned short  uint32_t;
        typedef __UINT64_TYPE__ uint64_t;
        typedef unsigned long long  uint64_t;
        typedef unsigned __int64    uint64_t;
#               define bool bool
#       define bool unsigned char
/*==============================================================================
 * MARK: - TOON Types
 *============================================================================*/

/** Type of a TOON value (3 bit). */
typedef uint8_t ctoon_type;
/** Null type: `null` literal, no subtype. */
#define CTOON_TYPE_NULL        ((uint8_t)2)        /* _____010 */
/** Boolean type, subtype: TRUE, FALSE. */
#define CTOON_TYPE_BOOL        ((uint8_t)3)        /* _____011 */
/** Number type, subtype: UINT, SINT, REAL. */
#define CTOON_TYPE_NUM         ((uint8_t)4)        /* _____100 */
/** String type, subtype: NONE, NOESC. */
#define CTOON_TYPE_STR         ((uint8_t)5)        /* _____101 */
/** Array type, no subtype. */
#define CTOON_TYPE_ARR         ((uint8_t)6)        /* _____110 */
/** Object type, no subtype. */
#define CTOON_TYPE_OBJ         ((uint8_t)7)        /* _____111 */
/*==============================================================================
 * MARK: - Allocator
 *============================================================================*/

/**
 A memory allocator.

 Typically you don't need to use it, unless you want to customize your own
 memory allocator.
 */
typedef struct ctoon_alc {
    /** Same as libc's malloc(size), should not be NULL. */
    void *(*malloc)(void *ctx, size_t size);
    /** Same as libc's realloc(ptr, size), should not be NULL. */
    void *(*realloc)(void *ctx, void *ptr, size_t old_size, size_t size);
    /** Same as libc's free(ptr), should not be NULL. */
    void (*free)(void *ctx, void *ptr);
    /** A context for malloc/realloc/free, can be NULL. */
    void *ctx;
} ctoon_alc;
/*==============================================================================
 * MARK: - TOON Structure
 *============================================================================*/

/**
 An immutable document for reading TOON.
 This document holds memory for all its TOON values and strings. When it is no
 longer used, the user should call `ctoon_doc_free()` to free its memory.
 */
typedef struct ctoon_doc ctoon_doc;
/**
 An immutable value for reading TOON.
 A TOON Value has the same lifetime as its document. The memory is held by its
 document and and cannot be freed alone.
 */
typedef struct ctoon_val ctoon_val;
/**
 A mutable document for building TOON.
 This document holds memory for all its TOON values and strings. When it is no
 longer used, the user should call `ctoon_mut_doc_free()` to free its memory.
 */
typedef struct ctoon_mut_doc ctoon_mut_doc;
/**
 A mutable value for building TOON.
 A TOON Value has the same lifetime as its document. The memory is held by its
 document and and cannot be freed alone.
 */
typedef struct ctoon_mut_val ctoon_mut_val;
/*==============================================================================
 * MARK: - TOON Reader API
 *============================================================================*/

/** Run-time options for TOON reader. */
typedef uint32_t ctoon_read_flag;
/** Result code for TOON reader. */
typedef uint32_t ctoon_read_code;
/** Error information for TOON reader. */
typedef struct ctoon_read_err {
    /** Error code, see `ctoon_read_code` for all possible values. */
    ctoon_read_code code;
    /** Error message, constant, no need to free (NULL if success). */
    const char *msg;
    /** Error byte position for input data (0 if success). */
    size_t pos;
} ctoon_read_err;
/**
 Read TOON with options.

 This function is thread-safe when:
 1. The `dat` is not modified by other threads.
 2. The `alc` is thread-safe or NULL.

 @param dat The TOON data (UTF-8 without BOM), null-terminator is not required.
    If this parameter is NULL, the function will fail and return NULL.
    The `dat` will not be modified without the flag `CTOON_READ_INSITU`, so you
    can pass a `const char *` string and case it to `char *` if you don't use
    the `CTOON_READ_INSITU` flag.
 @param len The length of TOON data in bytes.
    If this parameter is 0, the function will fail and return NULL.
 @param flg The TOON read options.
    Multiple options can be combined with `|` operator. 0 means no options.
 @param alc The memory allocator used by TOON reader.
    Pass NULL to use the libc's default allocator.
 @param err A pointer to receive error information.
    Pass NULL if you don't need error information.
 @return A new TOON document, or NULL if an error occurs.
    When it's no longer needed, it should be freed with `ctoon_doc_free()`.
 */
ctoon_api ctoon_doc *ctoon_read_opts(char *dat,
                                        size_t len,
                                        ctoon_read_flag flg,
                                        const ctoon_alc *alc,
                                        ctoon_read_err *err);
/*==============================================================================
 * MARK: - TOON Writer API
 *============================================================================*/

/** Run-time flags for TOON writer. */
typedef uint32_t ctoon_write_flag;
/** Array value delimiter used during encoding. */
typedef enum ctoon_delimiter {
    CTOON_DELIMITER_COMMA = 0, /**< , (default) */
    CTOON_DELIMITER_TAB,       /**< \\t            */
    CTOON_DELIMITER_PIPE       /**< |             */
} ctoon_delimiter;
/** Result codes for the TOON writer. */
typedef uint32_t ctoon_write_code;
/** Error information for TOON writer. */
typedef struct ctoon_write_err {
    ctoon_write_code code; /**< Error code (0 = success). */
    const char      *msg;  /**< Constant error message, NULL on success. */
} ctoon_write_err;
/** Full options for ctoon_write_opts / ctoon_val_write_opts. */
typedef struct ctoon_write_options {
    ctoon_write_flag  flag;      /**< CTOON_WRITE_* flags (no indent here). */
    ctoon_delimiter   delimiter; /**< Array value delimiter.                 */
    int               indent;    /**< Spaces per indent level (0 = minify, default 2). */
} ctoon_write_options;
/** Write a mutable document to TOON string with full options. */
ctoon_api char *ctoon_mut_write_opts(const ctoon_mut_doc *doc,
                                      const ctoon_write_options *opts,
                                      const ctoon_alc *alc,
                                      size_t *len,
                                      ctoon_write_err *err);
/**
 * Parse a JSON string into a ctoon_doc.
 *
 * The returned document has the same flat ctoon_val pool layout as one
 * produced by ctoon_read(). The full ctoon API (ctoon_obj_get,
 * ctoon_arr_iter, ctoon_get_str, …) works on JSON-sourced documents
 * without any conversion step.
 *
 * @param dat  Input bytes (UTF-8, null-terminator not required).
 * @param len  Byte count. Must be > 0.
 * @param flg  CTOON_READ_* flags (BOM, INSITU, etc.).
 * @param alc  Allocator, or NULL for the default libc allocator.
 * @param err  Receives error details on failure; may be NULL.
 * @return     Heap-allocated document, or NULL on failure.
 *             The caller must release it with ctoon_doc_free().
 */
ctoon_api ctoon_doc *ctoon_read_json(char *dat, size_t len,
                                      ctoon_read_flag flg,
                                      const ctoon_alc *alc,
                                      ctoon_read_err *err);
/** Same as ctoon_write_json() but operates on a mutable document. */
ctoon_api char *ctoon_write_json_mut(const ctoon_mut_doc *doc,
                                      int indent,
                                      ctoon_write_flag flg,
                                      const ctoon_alc *alc,
                                      size_t *len,
                                      ctoon_write_err *err);
/*==============================================================================
 * MARK: - TOON Object Iterator API
 *============================================================================*/

/**
 A TOON object iterator.

 @b Example
 @code
    ctoon_val *key, *val;
    ctoon_obj_iter iter = ctoon_obj_iter_with(obj);
    while ((key = ctoon_obj_iter_next(&iter))) {
        val = ctoon_obj_iter_get_val(key);
        your_func(key, val);
    }
 @endcode

 If the ordering of the keys is known at compile-time, you can use this method
 to speed up value lookups:
 @code
    // {"k1":1, "k2": 3, "k3": 3}
    ctoon_val *key, *val;
    ctoon_obj_iter iter = ctoon_obj_iter_with(obj);
    ctoon_val *v1 = ctoon_obj_iter_get(&iter, "k1");
    ctoon_val *v3 = ctoon_obj_iter_get(&iter, "k3");
 @endcode
 @see ctoon_obj_iter_get() and ctoon_obj_iter_getn()
 */
typedef struct ctoon_obj_iter {
    size_t idx; /**< next key's index */
    size_t max; /**< maximum key index (obj.size) */
    ctoon_val *cur; /**< next key */
    ctoon_val *obj; /**< the object being iterated */
}
 ctoon_obj_iter;
/** Release the TOON document and free the memory.
    After calling this function, the `doc` and all values from the `doc` are no
    longer available. This function will do nothing if the `doc` is NULL.  */
ctoon_api void ctoon_mut_doc_free(ctoon_mut_doc *doc);
/** Creates and returns a new mutable TOON document, returns NULL on error.
    If allocator is NULL, the default allocator will be used. */
ctoon_api ctoon_mut_doc *ctoon_mut_doc_new(const ctoon_alc *alc);
/*==============================================================================
 * MARK: - TOON Structure (Implementation)
 *============================================================================*/

/** Payload of a TOON value (8 bytes). */
typedef union ctoon_val_uni {
    uint64_t    u64;
    int64_t     i64;
    double      f64;
    const char *str;
    void       *ptr;
    size_t      ofs;
} ctoon_val_uni;
/**
 Immutable TOON value, 16 bytes.
 */
struct ctoon_val {
    uint64_t tag; /**< type, subtype and length */
    ctoon_val_uni uni; /**< payload */
};
struct ctoon_doc {
    /** Root value of the document (nonnull). */
    ctoon_val *root;
    /** Allocator used by document (nonnull). */
    ctoon_alc alc;
    /** The total number of bytes read when parsing TOON (nonzero). */
    size_t dat_read;
    /** The total number of value read when parsing TOON (nonzero). */
    size_t val_read;
    /** The string pool used by TOON values (nullable). */
    char *str_pool;
};
/*==============================================================================
 * MARK: - Mutable TOON Structure (Implementation)
 *============================================================================*/

/**
 Mutable TOON value, 24 bytes.
 The 'tag' and 'uni' field is same as immutable value.
 The 'next' field links all elements inside the container to be a cycle.
 */
struct ctoon_mut_val {
    uint64_t tag; /**< type, subtype and length */
    ctoon_val_uni uni; /**< payload */
    ctoon_mut_val *next; /**< the next value in circular linked list */
};
/**
 A memory pool to hold all strings in a mutable document.
 */
typedef struct ctoon_str_pool {
    char *cur; /* cursor inside current chunk */
    char *end; /* the end of current chunk */
    size_t chunk_size; /* chunk size in bytes while creating new chunk */
    size_t chunk_size_max; /* maximum chunk size in bytes */
    ctoon_str_chunk *chunks; /* a linked list of chunks, nullable */
} ctoon_str_pool;
/**
 A memory pool to hold all values in a mutable document.
 */
typedef struct ctoon_val_pool {
    ctoon_mut_val *cur; /* cursor inside current chunk */
    ctoon_mut_val *end; /* the end of current chunk */
    size_t chunk_size; /* chunk size in bytes while creating new chunk */
    size_t chunk_size_max; /* maximum chunk size in bytes */
    ctoon_val_chunk *chunks; /* a linked list of chunks, nullable */
} ctoon_val_pool;
struct ctoon_mut_doc {
    ctoon_mut_val *root; /**< root value of the TOON document, nullable */
    ctoon_alc alc; /**< a valid allocator, nonnull */
    ctoon_str_pool str_pool; /**< string memory pool */
    ctoon_val_pool val_pool; /**< value memory pool */
};